fixed alignment of share banner text and button

--- a/src/main/webapp/css/jFlix.css
+++ b/src/main/webapp/css/jFlix.css
@@ -179,7 +179,7 @@ a:hover, a:focus {
 .sharedName {
     position: absolute;
     bottom: 45px;
-    text-align: center;
+    min-height: 40px;
     background-color: #c20202;
     color: #fff;
     text-decoration: none;
@@ -214,9 +214,39 @@ a:hover, a:focus {
     font-size: 11px;
 }
 
+.sharedNameName {
+    float: left; 
+    width: 139px; 
+    padding: 2px 10px; 
+    text-align: left;
+    position: relative;
+    margin-top: 5px;
+}
+
+.sharedNameButton {
+    float: right; 
+    margin-right: 5px; 
+    width: 60px;
+}
+
+.sharedNameButton button {
+    border: 1px solid #fff;
+    padding: 2px 5px;
+    position: absolute;
+        top: 50%;
+        margin-top: -13px;
+        right: 10px;
+}
+
+.sharedNameButton button:hover {
+    border: 1px solid #fff;
+}
+
 .return-movie {
     padding: 2px 5px; 
     background-color: #660000;
+    padding: 2px 5px; 
+    border: #fff solid 1px;
 }
 
 /*for shared glyphcon*/
